Requisiti Extraction (#92)
* added params to search API

* rights holder is now indexed

* rights holder is now indexed

* rights holder is now indexed

* fixes owasp

* using a different index name to avoid reindexing